# openjpeg

./: CMakeLists.txt  Dockerfile  test-fix.cjs  test-fix.mjs
scripts/: wasm-build.sh
src/: CMakeLists.txt  J2KDecoder.hpp  jslib.cpp
